samples/_failures_safe/1761272619_d7f2fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d226d26.c: In function ‘main’:
./samples/SAFE/__tmp_1d226d26.c:170:26: error: missing terminating ' character
  170 |         input[len - 1] = '\
      |                          ^~
./samples/SAFE/__tmp_1d226d26.c:170:9: error: expected expression at end of input
  170 |         input[len - 1] = '\
      |         ^~~~~
./samples/SAFE/__tmp_1d226d26.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d226d26.c:170:9: error: expected declaration or statement at end of input
